--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10918,3 +10918,18 @@ a:hover,
   color: #fff;
 }
 
+.featured-articles {
+  padding: 2rem;
+}
+
+.pagination {
+  margin-top: 2rem;
+  justify-content: center;
+}
+
+.pagination .page-link {
+  background-color: #52585d;
+  border: 0;
+  color: #fff;
+}
+
